--- a/Pathe/Pathe.csproj
+++ b/Pathe/Pathe.csproj
@@ -106,7 +106,7 @@
     <Content Include="default.aspx" />
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
-    <Content Include="js\holder.js" />
+    <Content Include="js\holder.min.js" />
     <Content Include="js\material.js" />
     <Content Include="js\material.min.js" />
     <Content Include="js\ripples.js" />
