FUCKING GODVERDOMME KUT ORACLE

--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -5,11 +5,46 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="DATA SOURCE=localhost;PASSWORD=pathe;USER ID=PATHE"
-      providerName="Oracle.ManagedDataAccess.Client" />
+    <clear />
+    <!-- Geweldige wachtwoorden! -->
+    <add name="OraAspNetConString" connectionString="DATA SOURCE=localhost;PASSWORD=wachtwoord;PERSIST SECURITY INFO=True;USER ID=SYSTEM"
+      providerName="Oracle.DataAccess.Client" />
+    <add name="ConnectionString2" connectionString="DATA SOURCE=localhost;PASSWORD=pathe;PERSIST SECURITY INFO=True;USER ID=PATHE"
+      providerName="Oracle.DataAccess.Client" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
+    <!-- Configure the Sql Membership Provider -->
+    <authentication mode="Forms" >
+      <forms loginUrl="login.aspx"
+        name=".ASPXFORMSAUTH" />
+    </authentication>
+    <authorization>
+      <allow users="*" />
+    </authorization>
+    <membership defaultProvider="OracleProvider" userIsOnlineTimeWindow="15">
+      <providers>
+        <clear/>
+        <add
+          name="OracleProvider"
+          type="System.Web.Security.SqlMembershipProvider"
+          connectionStringName="OraAspNetConString"
+          applicationName="Pathe"
+          enablePasswordRetrieval="false"
+          enablePasswordReset="true"
+          requiresQuestionAndAnswer="false"
+          requiresUniqueEmail="true"
+          passwordFormat="Hashed" />
+      </providers>
+    </membership>
+    <roleManager enabled="true" defaultProvider="SqlRoleManager">
+      <providers>
+        <add name="SqlRoleManager"
+             type="System.Web.Security.SqlRoleProvider"
+             connectionStringName="OraAspNetConString"
+             applicationName="Pathe" />
+      </providers>
+    </roleManager>
   </system.web>
 </configuration>
