Fix user registration

--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -23,25 +23,37 @@
     <authorization>
       <allow users="*" />
     </authorization>
-    <membership defaultProvider="OracleProvider" userIsOnlineTimeWindow="15">
+    <membership defaultProvider="MyOracleMembershipProvider" userIsOnlineTimeWindow="15">
       <providers>
         <clear/>
-        <add
-          name="OracleProvider"
-          type="System.Web.Security.SqlMembershipProvider"
-          connectionStringName="OraAspNetConString"
-          applicationName="Pathe"
-          enablePasswordRetrieval="false"
-          enablePasswordReset="true"
-          requiresQuestionAndAnswer="false"
-          requiresUniqueEmail="true"
-          passwordFormat="Hashed" />
+        <!--<add name="OracleProvider"
+             type="System.Web.Security.SqlMembershipProvider"
+             connectionStringName="OraAspNetConString"
+             applicationName="Pathe"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="true"
+             passwordFormat="Hashed" />-->
+        
+        <add name="MyOracleMembershipProvider"
+             type="Oracle.Web.Security.OracleMembershipProvider"
+             connectionStringName="OraAspNetConString"
+             applicationName="Pathe"
+             enablePasswordRetrieval="false"
+             enablePasswordReset="true"
+             requiresQuestionAndAnswer="false"
+             requiresUniqueEmail="true"
+             passwordFormat="Hashed"
+             maxInvalidPasswordAttempts="4"
+             minRequiredPasswordLength="9"
+             passwordAttemptWindow="8"/>
       </providers>
     </membership>
     <roleManager enabled="true" defaultProvider="SqlRoleManager">
       <providers>
         <add name="SqlRoleManager"
-             type="System.Web.Security.SqlRoleProvider"
+             type="Oracle.Web.Security.OracleRoleProvider"
              connectionStringName="OraAspNetConString"
              applicationName="Pathe" />
       </providers>
