--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -23,20 +23,10 @@
     <authorization>
       <allow users="*" />
     </authorization>
-    <membership defaultProvider="MyOracleMembershipProvider" userIsOnlineTimeWindow="15">
+    <membership defaultProvider="OracleProvider" userIsOnlineTimeWindow="15">
       <providers>
         <clear/>
-        <!--<add name="OracleProvider"
-             type="System.Web.Security.SqlMembershipProvider"
-             connectionStringName="OraAspNetConString"
-             applicationName="Pathe"
-             enablePasswordRetrieval="false"
-             enablePasswordReset="true"
-             requiresQuestionAndAnswer="false"
-             requiresUniqueEmail="true"
-             passwordFormat="Hashed" />-->
-        
-        <add name="MyOracleMembershipProvider"
+        <add name="OracleProvider"
              type="Oracle.Web.Security.OracleMembershipProvider"
              connectionStringName="OraAspNetConString"
              applicationName="Pathe"
@@ -50,13 +40,41 @@
              passwordAttemptWindow="8"/>
       </providers>
     </membership>
-    <roleManager enabled="true" defaultProvider="SqlRoleManager">
+    <roleManager enabled="true" defaultProvider="OracleRoleProvider">
       <providers>
-        <add name="SqlRoleManager"
+        <clear/>
+        <add name="OracleRoleProvider"
              type="Oracle.Web.Security.OracleRoleProvider"
              connectionStringName="OraAspNetConString"
              applicationName="Pathe" />
       </providers>
     </roleManager>
   </system.web>
+  <!-- Set page and folder permissions -->
+  <location path="login.aspx">
+    <system.web>
+      <authorization>
+        <allow users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="register.aspx">
+    <system.web>
+      <authorization>
+        <allow users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+
+  <location path="Admin">
+    <system.web>
+
+      <authorization>
+        <allow roles="Admin"/>
+
+        <deny users="*"/>
+      </authorization>
+
+    </system.web>
+  </location>
 </configuration>
