Update menu and improve authentication

--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -28,7 +28,7 @@
         <clear/>
         <add name="OracleProvider"
              type="Oracle.Web.Security.OracleMembershipProvider"
-             connectionStringName="OraAspNetConString"
+             connectionStringName="ConnectionString2"
              applicationName="Pathe"
              enablePasswordRetrieval="false"
              enablePasswordReset="true"
@@ -45,7 +45,7 @@
         <clear/>
         <add name="OracleRoleProvider"
              type="Oracle.Web.Security.OracleRoleProvider"
-             connectionStringName="OraAspNetConString"
+             connectionStringName="ConnectionString2"
              applicationName="Pathe" />
       </providers>
     </roleManager>
@@ -70,7 +70,7 @@
     <system.web>
 
       <authorization>
-        <allow roles="Admin"/>
+        <allow roles="GlobalAdmin,FilmAdmin,UserAdmin,BlogAdmin"/>
 
         <deny users="*"/>
       </authorization>
