--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -13,7 +13,7 @@
       providerName="Oracle.DataAccess.Client" />
   </connectionStrings>
   <system.web>
-    <trace enabled="true" pageOutput="true" requestLimit="40" localOnly="false"/>
+    <trace enabled="true" pageOutput="false" requestLimit="40" localOnly="false"/>
     <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
     <!-- Configure the Sql Membership Provider -->
