--- a/Pathe/Pathe.csproj
+++ b/Pathe/Pathe.csproj
@@ -63,7 +63,6 @@
     <Content Include="admin\default.aspx" />
     <Content Include="admin\film.aspx" />
     <Content Include="admin\films.aspx" />
-    <Content Include="admin\inc\menu.aspx" />
     <Content Include="css\material-fullpalette.css.map" />
     <Content Include="css\material.css.map" />
     <Content Include="css\ripples.css.map" />
@@ -108,9 +107,6 @@
     <Content Include="fonts\LICENSE.txt" />
     <Content Include="fonts\Material-Design-Icons.svg" />
     <Content Include="Global.asax" />
-    <Content Include="inc\header.aspx" />
-    <Content Include="inc\js.aspx" />
-    <Content Include="inc\menu.aspx" />
     <Content Include="default.aspx" />
     <Content Include="inc\User Controls\footer.ascx" />
     <Content Include="js\bootstrap.js" />
@@ -122,6 +118,7 @@
     <Content Include="js\ripples.js" />
     <Content Include="js\ripples.min.js" />
     <Content Include="login.aspx" />
+    <Content Include="logout.aspx" />
     <Content Include="register.aspx" />
     <Content Include="roles.aspx" />
     <Content Include="template.aspx" />
@@ -152,13 +149,6 @@
     <Compile Include="admin\films.aspx.designer.cs">
       <DependentUpon>films.aspx</DependentUpon>
     </Compile>
-    <Compile Include="admin\inc\menu.aspx.cs">
-      <DependentUpon>menu.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="admin\inc\menu.aspx.designer.cs">
-      <DependentUpon>menu.aspx</DependentUpon>
-    </Compile>
     <Compile Include="database.cs" />
     <Compile Include="film.aspx.cs">
       <DependentUpon>film.aspx</DependentUpon>
@@ -177,27 +167,6 @@
     </Compile>
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
-    </Compile>
-    <Compile Include="inc\header.aspx.cs">
-      <DependentUpon>header.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="inc\header.aspx.designer.cs">
-      <DependentUpon>header.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="inc\js.aspx.cs">
-      <DependentUpon>js.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="inc\js.aspx.designer.cs">
-      <DependentUpon>js.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="inc\menu.aspx.cs">
-      <DependentUpon>menu.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="inc\menu.aspx.designer.cs">
-      <DependentUpon>menu.aspx</DependentUpon>
     </Compile>
     <Compile Include="default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
@@ -226,6 +195,13 @@
     </Compile>
     <Compile Include="login.aspx.designer.cs">
       <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="logout.aspx.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="logout.aspx.designer.cs">
+      <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="register.aspx.cs">
@@ -258,7 +234,9 @@
     </Compile>
     <Compile Include="User.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="admin\inc\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
