--- a/Pathe/Pathe.csproj
+++ b/Pathe/Pathe.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Content Include="admin\default.aspx" />
     <Content Include="admin\film.aspx" />
+    <Content Include="admin\filmAdd.aspx" />
     <Content Include="admin\films.aspx" />
     <Content Include="css\material-fullpalette.css.map" />
     <Content Include="css\material.css.map" />
@@ -84,6 +85,17 @@
     <Content Include="fonts\RobotoDraftMedium.woff2" />
     <Content Include="fonts\RobotoDraftRegular.woff" />
     <Content Include="fonts\RobotoDraftRegular.woff2" />
+    <Content Include="img\kw_al.png" />
+    <Content Include="img\kw_angst.png" />
+    <Content Include="img\kw_disriminatie.png" />
+    <Content Include="img\kw_drugsalcohol.png" />
+    <Content Include="img\kw_geweld.png" />
+    <Content Include="img\kw_negen.png" />
+    <Content Include="img\kw_seks.png" />
+    <Content Include="img\kw_taalgebruik.png" />
+    <Content Include="img\kw_twaalf.png" />
+    <Content Include="img\kw_zes.png" />
+    <Content Include="img\kw_zestien.png" />
     <Content Include="inc\Pathe_user.Master" />
     <Content Include="inc\Pathe_admin.master" />
     <None Include="Web.Debug.config">
@@ -112,17 +124,19 @@
     <Content Include="js\bootstrap.js" />
     <Content Include="js\bootstrap.min.js" />
     <Content Include="js\holder.min.js" />
+    <Content Include="js\jquery.fileupload.js" />
+    <Content Include="js\jquery.iframe-transport.js" />
     <Content Include="js\jquery.min.js" />
     <Content Include="js\material.js" />
     <Content Include="js\material.min.js" />
     <Content Include="js\ripples.js" />
     <Content Include="js\ripples.min.js" />
+    <Content Include="js\vendor\jquery.ui.widget.js" />
     <Content Include="login.aspx" />
     <Content Include="logout.aspx" />
     <Content Include="register.aspx" />
     <Content Include="roles.aspx" />
     <Content Include="template.aspx" />
-    <Content Include="template_page.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -141,6 +155,13 @@
     </Compile>
     <Compile Include="admin\film.aspx.designer.cs">
       <DependentUpon>film.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="admin\filmAdd.aspx.cs">
+      <DependentUpon>filmAdd.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\filmAdd.aspx.designer.cs">
+      <DependentUpon>filmAdd.aspx</DependentUpon>
     </Compile>
     <Compile Include="admin\films.aspx.cs">
       <DependentUpon>films.aspx</DependentUpon>
@@ -225,17 +246,11 @@
     <Compile Include="template.aspx.designer.cs">
       <DependentUpon>template.aspx</DependentUpon>
     </Compile>
-    <Compile Include="template_page.aspx.cs">
-      <DependentUpon>template_page.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="template_page.aspx.designer.cs">
-      <DependentUpon>template_page.aspx</DependentUpon>
-    </Compile>
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="admin\inc\" />
+    <Folder Include="img\upload\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
