--- a/Pathe/Pathe.csproj
+++ b/Pathe/Pathe.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="admin\cinemas.aspx" />
     <Content Include="admin\default.aspx" />
     <Content Include="admin\film.aspx" />
     <Content Include="admin\filmAdd.aspx" />
@@ -98,6 +99,10 @@
     <Content Include="img\kw_zestien.png" />
     <Content Include="inc\Pathe_user.Master" />
     <Content Include="inc\Pathe_admin.master" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -137,11 +142,19 @@
     <Content Include="register.aspx" />
     <Content Include="roles.aspx" />
     <Content Include="template.aspx" />
+    <None Include="todo.md" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="admin\cinemas.aspx.cs">
+      <DependentUpon>cinemas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="admin\cinemas.aspx.designer.cs">
+      <DependentUpon>cinemas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="admin\default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -225,6 +238,11 @@
       <DependentUpon>logout.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
     <Compile Include="register.aspx.cs">
       <DependentUpon>register.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
