--- a/Pathe/Pathe.csproj
+++ b/Pathe/Pathe.csproj
@@ -139,6 +139,7 @@
     <Content Include="js\vendor\jquery.ui.widget.js" />
     <Content Include="login.aspx" />
     <Content Include="logout.aspx" />
+    <Content Include="profile.aspx" />
     <Content Include="register.aspx" />
     <Content Include="roles.aspx" />
     <Content Include="template.aspx" />
@@ -235,6 +236,13 @@
     </Compile>
     <Compile Include="logout.aspx.designer.cs">
       <DependentUpon>logout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="profile.aspx.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="profile.aspx.designer.cs">
+      <DependentUpon>profile.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
