--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -51,6 +51,7 @@
       </providers>
     </roleManager>
   </system.web>
+  
   <!-- Set page and folder permissions -->
   <location path="login.aspx">
     <system.web>
@@ -66,15 +67,20 @@
       </authorization>
     </system.web>
   </location>
+  <location path="profile.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
 
   <location path="Admin">
     <system.web>
       <authorization>
         <allow roles="GlobalAdmin,FilmAdmin,UserAdmin,BlogAdmin"/>
-
         <deny users="*"/>
       </authorization>
-
     </system.web>
   </location>
 </configuration>
