--- a/Pathe/Web.config
+++ b/Pathe/Web.config
@@ -67,6 +67,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="finish_registration.aspx">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
   <location path="profile.aspx">
     <system.web>
       <authorization>
