--- a/Pathe.Tests/Pathe.Tests.csproj
+++ b/Pathe.Tests/Pathe.Tests.csproj
@@ -48,7 +48,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="SimpleDateTests.cs" />
+    <Compile Include="FilmTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
